objects/AIA_Benefits__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>this field will be used for custom benefits and limitations</description>
        <label>Additional Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Additional_Limitation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Additional Limitation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Amount_Customized__c</fullName>
        <formula>Allowed_Amount__c != Allowed_Amount_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Allowed Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_Amount_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Allowed Amount Default</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Allowed_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>INN Allowed Amount</inlineHelpText>
        <label>INN Plan Pays</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnnualMaximumApplies__c</fullName>
        <label>INN Annual Maximum Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDPName__c</fullName>
        <description>The name of the Benefit Design Product this benefit belongs to.</description>
        <formula>Grouper__r.BDPName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDP Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDPNewBenefitValue__c</fullName>
        <formula>IF( TEXT(Grouper__r.Group_Type__c) =='Cost Share Group',
 Cost_Share_SelectedAmount__c +'_'+ OON_Cost_Share_SelectedAmount__c ,
CASE(  TEXT(Grouper__r.Benefit_Design_Product__r.Product_Category__c ),
 'Medical',  (TEXT(Copay_Type_1_IsCovered__c)+'_'+ CoInsurance_AmountValueSelected__c+'_'+ TEXT( Copay_Type_1_DeductibleApplies__c)+ '_'+Copay_Type_1_AmountValueSelected__c+ '_'+Copay_Type_2_AmountValueSelected__c +'_'+(TEXT( OON_Copay_Type_1_IsCovered__c )+ '_'+ OON_CoInsurance_AmountValueSelected__c +'_'+TEXT(  OON_Copay_Type_1_DeductibleApplies__c )+ '_'+ OON_Copay_Type_1_AmountValueSelected__c +  '_'+OON_Copay_Type_2_AmountValueSelected__c )),
'Drug', (TEXT(Copay_Type_1_IsCovered__c)+ '_'+Copay_Type_1_AmountValueSelected__c+ '_'+CoInsurance_AmountValueSelected__c+  '_'+   Copay_Min_Payment__c +  '_'+  Copay_Max_Payment__c+ '_'+ (TEXT( Tier_type__c )+'_'  +(TEXT( OON_Copay_Type_1_IsCovered__c )+  '_'+OON_Copay_Type_1_AmountValueSelected__c +  '_'+  OON_CoInsurance_AmountValueSelected__c + '_'+ OON_Copay_Min_Payment__c +  '_'+   OON_Copay_Max_Payment__c+ '_'+(TEXT( OON_Tier_Type__c ) ) ))),
'' )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BDP NewBenefitValue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDPid__c</fullName>
        <formula>CASESAFEID(Grouper__r.Benefit_Design_Product__c)</formula>
        <label>BDP id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRF_BD__c</fullName>
        <formula>Grouper__r.BRF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BRF / BD #</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Customized__c</fullName>
        <formula>IF(  NewBenefitValue__c &lt;&gt; DefaultPlanBenefitValue__c ,true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Benefit Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Modified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Modified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Non_Standard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Benefit Non-Standard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Benefit_Record_Type__c</fullName>
        <label>Benefit Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Summary_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Limitation/Mandate</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Benefit_Summary_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Limitation/Mandate Comment Codes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit</fullName>
                    <default>true</default>
                    <label>Benefit</label>
                </value>
                <value>
                    <fullName>Mandate</fullName>
                </value>
                <value>
                    <fullName>Limitation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CS_Benefit_Name_Drawloop__c</fullName>
        <formula>/*IF(Benefit_Name__c='AnnualMax','AnnualMax ($)',IF(Benefit_Name__c='Coinsurance','Coinsurance (%)',IF(Benefit_Name__c='PCP Copay','PCP Copay ($)',if(Benefit_Name__c='Per Admission Copay','Per Admission Copay ($)',IF(Benefit_Name__c='Specialist Copay','Specialist Copay ($)',IF(Benefit_Name__c='Three Month Carryover Deductible','Three Month Carryover Deductible',IF(Benefit_Name__c='Family Deductible','Family Deductible ($)',IF(Benefit_Name__c='Individual +1 Deductible','Individual +1 Deductible ($)',IF(Benefit_Name__c='Individual Deductible','Individual Deductible ($)',IF(Benefit_Name__c='Per Member Lifetime Maximum','Per Member Lifetime Maximum ($)',IF(Benefit_Name__c='Family Out Of Pocket','Family Out Of Pocket ($)',IF(Benefit_Name__c='Individual +1 Out Of Pocket','Individual +1 Out Of Pocket ($)',IF(Benefit_Name__c='Individual Out Of Pocket','Individual Out Of Pocket ($)',IF(Benefit_Name__c='AnnualMax_Single','AnnualMax_Single ($)',Null))))))))))))))*/ 

CASE(Benefit_Name__c, 
"AnnualMax","AnnualMax ($)", 
"Benefit Period Maximum per member","Benefit Period Maximum per member ($)", 
"Coinsurance","Coinsurance (%)", 
"Individual Deductible","Individual Deductible ($)", 
"Family Deductible","Family Deductible ($)", 
"Individual Out Of Pocket","Individual Out Of Pocket ($)", 
"Family Out Of Pocket","Family Out Of Pocket ($)", 
"Per Admission Copay","Per Admission Copay ($)", 
"PCP Copay","PCP Copay ($)", 
"Specialist Copay","Specialist Copay ($)", 
"Per Member Lifetime Maximum","Per Member Lifetime Maximum ($)", 
"Individual +1 Deductible","Individual +1 Deductible ($)", 
"Individual +1 Out Of Pocket","Individual +1 Out Of Pocket ($)", 
"Three Month Carryover Deductible","Three Month Carryover Deductible", 
"In-Network","In-Network", 
"Out-Network","Out-Network", 
"None")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CS Benefit Name Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cloned_From_Benefit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cloned From Benefit</label>
        <referenceTo>AIA_Benefits__c</referenceTo>
        <relationshipLabel>Benefit (Cloned From Benefit)</relationshipLabel>
        <relationshipName>Benefit1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CoInsurance_AmountValueSelected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>CoInsurance-AmountValueSelected</inlineHelpText>
        <label>INN CoInsurance</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_Customized__c</fullName>
        <formula>if( CoInsurance_AmountValueSelected__c != Coinsurance_DefaultAmount__c, true, false)</formula>
        <label>INN CoInsurance Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coinsurance_AmountHigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance - AmountHigh</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_AmountIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance - AmountIncrement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_AmountLow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance - AmountLow</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_Amount_AddtionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance AddtionalIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_Amount_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance-Amount InvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coinsurance_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Coinsurance - DefaultAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommentCode_Custom__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CommentCode Custom</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CommentCode_NonStandard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CommentCode NonStandard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CopayType2_Additional_InvalidIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Additional InvalidIncrement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountHigh__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay - AmountHigh</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay - AmountIncrement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_AmountLow__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay - AmountLow</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Default_Max_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Default Max Payment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Default_Min_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Default Min Payment</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Max_Payment_Customized__c</fullName>
        <formula>Copay_Default_Max_Payment__c != Copay_Max_Payment__c</formula>
        <label>Copay Max Payment Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Max_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Max Payment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Min_Payment_Customized__c</fullName>
        <formula>Copay_Default_Min_Payment__c != Copay_Min_Payment__c</formula>
        <label>Copay Min Payment Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Min_Payment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Copay Min Payment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_AdditionalInvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 1 AdditionalInvalidIncrements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Additional_Increments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 - Additional Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 - AliasName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_AmountValueSelected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Copay_Type_1_AmountValueSelected</inlineHelpText>
        <label>INN Copay 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Amount_Customized__c</fullName>
        <formula>if(Copay_Type_1_DefaultAmount__c!= null &amp;&amp; Copay_Type_1_AmountValueSelected__c!= Copay_Type_1_DefaultAmount__c, true, false)</formula>
        <label>INN Copay Type 1 Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Benefit_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 - Benefit Comment Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_DeductibleApplies__c</fullName>
        <inlineHelpText>Copay_Type_1_DeductibleApplies</inlineHelpText>
        <label>INN Copay Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Deductible_Customized__c</fullName>
        <formula>if(text(Copay_Type_1_Default_DeductibleApplies__c)!= null &amp;&amp; text(Copay_Type_1_DeductibleApplies__c)!= text(Copay_Type_1_Default_DeductibleApplies__c), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Copay Type 1 Deductible Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 DefaultAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Default_DeductibleApplies__c</fullName>
        <label>INN Copay 1 Default DeductibleApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Default_IsCovered__c</fullName>
        <label>INN Copay Type 1 Default IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 High</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 Increment</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Individual_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INN Copay Type 1 Individual Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_IsCovered_Customized__c</fullName>
        <formula>if(text(Copay_Type_1_Default_IsCovered__c)!= null &amp;&amp; text(Copay_Type_1_IsCovered__c)!= text(Copay_Type_1_Default_IsCovered__c), true, false)</formula>
        <label>INN Copay Type 1 IsCovered Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_IsCovered__c</fullName>
        <inlineHelpText>Copay Type 1 - IsCovered</inlineHelpText>
        <label>INN Copay IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Is_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INN Copay Type 1 Is ASO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Jurisdiction__c</fullName>
        <label>INN Copay Type 1 Jurisdiction`</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>VA</fullName>
                </value>
                <value>
                    <fullName>Federal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 Low</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_1_Max__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 1 Max</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Additional_Increments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 2 Additional Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay Type 2 AliasName</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_AmountValueSelected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Copay Type 2 - AmountValueSelected</inlineHelpText>
        <label>INN Copay 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Amount_Customized__c</fullName>
        <formula>if(Copay_Type_2_DefaultAmount__c!= null &amp;&amp; Copay_Type_2_AmountValueSelected__c!= Copay_Type_2_DefaultAmount__c, true, false)</formula>
        <label>INN Copay Type 2 Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Benefit_Comment_Codes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Benefit Comment Codes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_DeductibleApplies__c</fullName>
        <label>INN Copay 2 Deductible Applies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>NA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_2_DefaultAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 DefaultAmount</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 High</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Increment</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Individual_Mandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INN Copay 2 Individual Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_IsCovered__c</fullName>
        <label>INN Copay 2 IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Is_ASO_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>INN Copay 2 Is ASO Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Jurisdiction`</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Low</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Mandate Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copay_Type_2_Max__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Copay 2 Max</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_AdditionalIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Cost Share Additional Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Controller_Drawloop_1_network__c</fullName>
        <formula>IF(Cost_Share_SelectedAmount__c='NA',true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Share Controller Drawloop 1 network</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Controller_Drawloop__c</fullName>
        <formula>IF(AND(Cost_Share_SelectedAmount__c='NA',OON_Cost_Share_SelectedAmount__c='NA'),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost Share Controller Drawloop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Customized__c</fullName>
        <formula>if(Cost_Share_Default_Amount__c!= null &amp;&amp; Cost_Share_SelectedAmount__c!= Cost_Share_Default_Amount__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>INN Cost Share Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Default_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Cost Share Default Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Cost Share High</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Cost Share Increment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_InvalidIncrements__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Cost Share Invalid Increments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Cost Share Low</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_SelectedAmount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Cost Share - SelectedAmount</inlineHelpText>
        <label>INN Cost Share</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Share_Type__c</fullName>
        <label>Cost Share Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Dropdown_Yes_No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_of_CommentCode_Rec__c</fullName>
        <label>Count of CommentCode Rec</label>
        <summaryForeignKey>Limitations__c.Benefit__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Custom_Benefit_Comments_Drawloop__c</fullName>
        <formula>IF( Additional_Benefit__c = True,'true','false')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Custom Benefit Comments Drawloop</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Benefit_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Custom Benefit Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Custom_Benefit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Benefit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Davis_Benefit_Variable_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Davis Benefit Variable Default</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Davis_Benefit_Variable__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Davis Benefit Variable</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Davis_Variable_customized__c</fullName>
        <formula>if(  Davis_Benefit_Variable__c != Davis_Benefit_Variable_Default__c , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Davis Variable customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DefaultPlanBenefitValue__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DefaultPlanBenefitValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DentalOONAnnualMaximumApplies_Customized__c</fullName>
        <formula>Grouper__r.OON_AnnualMaximumApplies_Default__c != null &amp;&amp; (text(Grouper__r.OON_AnnualMaximumApplies__c ) !=  Grouper__r.OON_AnnualMaximumApplies_Default__c)</formula>
        <label>DentalOONAnnualMaximumApplies Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_AnnualMaximumApplies_Customized__c</fullName>
        <formula>Grouper__r.AnnualMaximumApplies_Default__c != null &amp;&amp; (text(Grouper__r.AnnualMaximumApplies__c) !=  Grouper__r.AnnualMaximumApplies_Default__c)</formula>
        <label>Dental AnnualMaximumApplies Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_CoInsurance_Customized__c</fullName>
        <formula>Grouper__r.CoInsurance_Default__c != null &amp;&amp; (Grouper__r.CoInsurance__c !=  Grouper__r.CoInsurance_Default__c)</formula>
        <label>Dental CoInsurance Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_DeductibleApplies_Customized__c</fullName>
        <formula>Grouper__r.DeductibleApplies_Default__c != null &amp;&amp; (text(Grouper__r.DeductibleApplies__c) !=  Grouper__r.DeductibleApplies_Default__c)</formula>
        <label>Dental DeductibleApplies Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_IsCovered_Customized__c</fullName>
        <formula>Grouper__r.IsCovered_Default__c != null &amp;&amp; (text(Grouper__r.IsCovered__c) !=   Grouper__r.IsCovered_Default__c)</formula>
        <label>Dental IsCovered Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_OON_CoInsurance_Customized__c</fullName>
        <formula>Grouper__r.OON_CoInsurance_Default__c != null &amp;&amp; (Grouper__r.OON_CoInsurance__c !=  Grouper__r.OON_CoInsurance_Default__c)</formula>
        <label>Dental OON CoInsurance Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_OON_DeductibleApplies_Customized__c</fullName>
        <formula>Grouper__r.OON_DeductibleApplies_Default__c != null &amp;&amp; (text(Grouper__r.OON_DeductibleApplies__c) !=  Grouper__r.OON_DeductibleApplies_Default__c)</formula>
        <label>Dental OON DeductibleApplies Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dental_OON_IsCovered_Customized__c</fullName>
        <formula>Grouper__r.OON_IsCovered_Default__c != null &amp;&amp; (text( Grouper__r.OON_IsCovered__c) !=  Grouper__r.OON_IsCovered_Default__c)</formula>
        <label>Dental OON IsCovered Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Customized__c</fullName>
        <formula>Discount_Amount__c != Discount_Amount_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount Amount Default</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Percent_Customized__c</fullName>
        <formula>Discount_Amount_Percent__c != Discount_Amount_Percent_Default__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount Amount Percent Customized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Percent_Default__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Discount Amount Percent Default</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount_Percent__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Discount Amount Percent</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_Amount__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>INN Additional Discount</label>
        <length>13</length>
        <type>Text</type>
    </fields>
</CustomObject>